improved docker image creation
* Use COPY instead of ADD to download extensions.
* Create a non-root user (java:java) to execute the application.
* Use /home/java as WORKDIR to allocate all files.
* Add exec to entrypoint.sh to replace the shell process by the JVM,
avoiding custom implementation for trap signals.
* Use RUN instead of ADD to download Java Cryptography Extension.

--- a/8-jre/Dockerfile
+++ b/8-jre/Dockerfile
@@ -1,5 +1,12 @@
 FROM openjdk:8-jre-alpine
 MAINTAINER Raúl Cruz
 
-# install entryproint script
-ADD entrypoint.sh .
+# Create user java:java
+RUN addgroup -S java && adduser -S -G java java
+WORKDIR /home/java
+
+# Run as user java:java
+USER java:java
+
+# Install entrypoint script
+COPY --chown=java:java entrypoint.sh .
