use of RUN instead of COPY because of --chown flag
COPY --chown is not supported in docker hub (needs docker 17.09)

--- a/8-jre/Dockerfile
+++ b/8-jre/Dockerfile
@@ -5,8 +5,11 @@ MAINTAINER Raúl Cruz
 RUN addgroup -S java && adduser -S -G java java
 WORKDIR /home/java
 
+# Install entrypoint script
+# Using RUN instead of "COPY --chown=java:java entrypoint.sh ." because of --chown incompatibility with docker version prior to 17.09)
+RUN wget https://raw.githubusercontent.com/rcruzper/openjdk/master/8-jre/entrypoint.sh && \
+    chmod u+x entrypoint.sh && \
+    chown java:java *
+
 # Run as user java:java
 USER java:java
-
-# Install entrypoint script
-COPY --chown=java:java entrypoint.sh .
